--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         
         <script src="script.js"> </script>
 
-        <button value="1" onclick="theme(this)" id="theme">tema</button>
-
+        <button value="false" onclick="theme()" id="theme">tema</button>
+            
         <p class="texts titleText colorText" id="display-text">
             Texto
         </p>
