--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <script src="script.js"> </script>
        
         <div check="false" id="containerTheme">
-            <img onclick="theme()" id="theme" src="/images/lua.png" alt="">
+            <img onclick="theme()" id="theme" src="./assets/moon.png" alt="">
         </div>
         
         <br>
